# sims4-mod-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  OWNERS-GUIDE.txt  PLAN.md  USAGE.md  pyproject.toml  readme.txt  s4chemist_cli.py  s4mod_cli.py
.github/workflows/: tests.yml
docs/: packaging.md  sims4-mod-types.md  validation.md
examples/S4ChemistDemo/: .s4modstate
examples/S4ChemistDemo/src/localization/: stbl_RouteMaster_aspiration.txt
examples/S4ChemistDemo/src/xml_snippets/NeonLot_club/: NeonLot_club.xml  README.txt
examples/S4ChemistDemo/src/xml_snippets/PitCrew_career/: PitCrew_career.xml  README.txt
examples/S4ChemistDemo/src/xml_snippets/RoadRage_whim/: README.txt  RoadRage_whim.xml
examples/S4ChemistDemo/src/xml_snippets/RouteMaster_aspiration/: README.txt  RouteMaster_aspiration.xml
examples/S4ChemistDemo/src/xml_snippets/caffeine_crash_motive/: README.txt  caffeine_crash_motive.xml
me/: s4modconfig.yaml
tests/: conftest.py  test_lifecycle.py  test_phases.py  test_smoke.py  test_tui.py  test_ui.py  utils.py
tools/: justfile
