[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s4chemist"
version = "0.1.1"
description = "Portable Sims 4 Mod Construction CLI with Hermes-style TUI and slot-n-lock pipeline."
readme = "readme.txt"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Khaotic Labs", email = "khaoticdev62@users.noreply.github.com"},
]
keywords = ["sims4", "modding", "cli", "pipeline"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.4", "mypy>=1.9", "pyinstaller"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
files = ["s4chemist_cli.py"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".git", "__pycache__", "dist", "tmp"]

[project.urls]
Homepage = "https://github.com/khaoticdev62/s4chemist"
Repository = "https://github.com/khaoticdev62/s4chemist"

[tool.setuptools]
py-modules = ["s4chemist_cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["s4chemist_cli*"]

[project.scripts]
s4chemist_cli = "s4chemist_cli:main"
